bin/tests/snapshots/shellcheck__f88c283f4ad4098068713aaee09f9297_fix.snap
---
source: bin/tests/shellcheck.rs
---
pkgs.writeShellApplication { name = "x"; text = ''
  rm -rf $DIR/*
''; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,3 +1,3 @@
 pkgs.writeShellApplication { name = "x"; text = ''
-  rm -rf $DIR/*
+  rm -rf "$DIR"/*
 ''; }
