bin/tests/snapshots/shellcheck__f88c283f4ad4098068713aaee09f9297_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
pkgs.writeShellApplication { name = "x"; text = ''
  rm -rf $DIR/*
''; }
---
<temp_file_path>>2:10:W:28:[shellcheck] SC2115: Use "${var:?}" to ensure this never expands to /* .
<temp_file_path>>2:10:W:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
