bin/tests/snapshots/shellcheck__f88c283f4ad4098068713aaee09f9297_lint_json.snap
---
source: bin/tests/shellcheck.rs
---
pkgs.writeShellApplication { name = "x"; text = ''
  rm -rf $DIR/*
''; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "shellcheck",
      "note": "ShellCheck found issues in an inline shell script",
      "code": 28,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 10
            },
            "to": {
              "line": 2,
              "column": 16
            }
          },
          "message": "SC2115: Use \"${var:?}\" to ensure this never expands to /* .",
          "suggestion": null
        },
        {
          "at": {
            "from": {
              "line": 2,
              "column": 10
            },
            "to": {
              "line": 2,
              "column": 14
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 49
              },
              "to": {
                "line": 3,
                "column": 3
              }
            },
            "fix": "''\n  rm -rf \"$DIR\"/*\n''"
          }
        }
      ]
    }
  ]
}
