bin/tests/snapshots/shellcheck__f88c283f4ad4098068713aaee09f9297_lint_stderr.snap
---
source: bin/tests/shellcheck.rs
---
pkgs.writeShellApplication { name = "x"; text = ''
  rm -rf $DIR/*
''; }
---
[shellcheck] Warning: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:2:10 ]
   │
 2 │   rm -rf $DIR/*
   │          ──┬┬──  
   │            ╰───── SC2086: Double quote to prevent globbing and word splitting.
   │             │    
   │             ╰──── SC2115: Use "${var:?}" to ensure this never expands to /* .
───╯
